--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <span> Check In Date:</span>
                   </div>
                   <div class="boking-datepicker">
-                    <input id="datepicker1" placeholder="10/12/2020" />
+                    <input id="datepicker1" placeholder="10/12/2020" required/>
                   </div>
                 </div>
                 <!-- Single Select Box -->
@@ -109,7 +109,7 @@
                     <span>Check OutDate:</span>
                   </div>
                   <div class="boking-datepicker">
-                    <input id="datepicker2" placeholder="12/12/2020" />
+                    <input id="datepicker2" placeholder="12/12/2020" required/>
                   </div>
                 </div>
                 <!-- Single Select Box -->
@@ -120,7 +120,7 @@
                   <div class="select-this">
                     <form action="#">
                       <div class="select-itms">
-                        <select name="select" id="select1">
+                        <select name="select" id="select1" required>
                           <option value="">1</option>
                           <option value="">2</option>
                           <option value="">3</option>
@@ -138,7 +138,7 @@
                   <div class="select-this">
                     <form action="#">
                       <div class="select-itms">
-                        <select name="select" id="select2">
+                        <select name="select" id="select2" required>
                           <option value="">1</option>
                           <option value="">2</option>
                           <option value="">3</option>
@@ -156,7 +156,7 @@
                   <div class="select-this">
                     <form action="#">
                       <div class="select-itms">
-                        <select name="select" id="select3">
+                        <select name="select" id="select3" required>
                           <option value="">1</option>
                           <option value="">2</option>
                           <option value="">3</option>
@@ -421,7 +421,7 @@
                     <script>
                       document.write(new Date().getFullYear());
                     </script>
-                    All rights reserved | Developed by Gurpreet Singh</a>
+                    All rights reserved | Developed by Gurpreet Singh and Gaganpreet Kaur</a>
                   </p>
                 </div>
               </div>
