--- a/services.html
+++ b/services.html
@@ -155,7 +155,7 @@
                     <script>
                       document.write(new Date().getFullYear());
                     </script>
-                    All rights reserved | Developed by Gurpreet Singh</a>
+                    All rights reserved | Developed by Gurpreet Singh and Gaganpreet Kaur</a>
                   </p>
                 </div>
               </div>
